[Refactor] Add tip to Nersy